SDM-2629: Publish IWXXM messages to RabbitMQ AMQP 1.0 broker (#124)
* POC implementation

* SDM-2629: Update Spring Boot version in README.md.

* SDM-2634: POC: Allow application startup without a working RabbitMQ connection (#125)

* SDM-2636 AMQP connection health contributor (#126)

* SDM-2637 Archival status (#127)

* SDM-2640: PostAction interface (#128)

* SDM-2644: Fix tests (#129)

* SDM-2641: Add post-action framework (#130)

* SDM-2648: Add ArchivalStatusPropertyReader. (#134)

* SDM-2649: Post-action framework tests (#131)

* SDM-2649: Moved TestConfig under config package and fixed testclass.name property values of @SpringBootTest test classes.

* SDM-2649: Test for integration-test profile as well.

* SDM-2649: Add testMissingPostActionExecutionChain() test case.

* SDM-2649: Add ConditionalPostActionIntegrationTest, refactoring and reusing existing code.
Based on ConditionalMessagePopulatorIntegrationTest, formerly ConditionalMessagePopulatorConfigTest.
Add TestPostAction and TestPostActionRegistry.

* SDM-2649: Make post-actions configuration optional.

* SDM-2649: Add AbstractMessagePopulatorFactoryConfig and AbstractPostActionFactoryConfig to reduce duplication in (test) configurations.

* SDM-2649: Add FailingPostActionTest. Also add TestFileUtil to reuse common code.

* SDM-2649: Test PostAction invocations in AviationMessageArchiverTest.

* SDM-2649: Add message populator and post-action-related test cases in InvalidConfigDetectionTest and ValidProductionLineConfigTest.

* SDM-2649: Code cleaning.

* SDM-2642: Adjust AmqpService into post-action framework (#132)

* SDM-2642: Make MessagePopulatorFactory and PostActionFactory interfaces.

* SDM-2642: Replace AmqpService with SwimRabbitMQPublisher and factory. Rework healt contributors.

* Small api fix.

* SDM-2642: Remove redundant implements interface.

* SDM-2642: Add and apply ObjectFactoryConfigFactory and some utilities.

* SDM-2647: Fixes to integration flow (#133)

* SDM-2647: Fixes to Int