@@ -1,31 +1,29 @@
 package fi.fmi.avi.archiver.config;
 
-import static fi.fmi.avi.archiver.config.SpringLoggingContextHelper.getLoggingContext;
-import static fi.fmi.avi.archiver.config.SpringLoggingContextHelper.withLoggingContext;
-import static fi.fmi.avi.archiver.config.SpringLoggingContextHelper.withPayloadAndLoggingContext;
-import static fi.fmi.avi.archiver.logging.GenericStructuredLoggable.loggable;
-import static java.util.Objects.requireNonNull;
-
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.time.Duration;
-import java.time.Instant;
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import javax.annotation.Nullable;
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-
+import com.google.common.collect.ImmutableList;
+import fi.fmi.avi.archiver.DefaultProcessingServiceContext;
+import fi.fmi.avi.archiver.ProcessingServiceContext;
+import fi.fmi.avi.archiver.ProcessingState;
+import fi.fmi.avi.archiver.config.model.AviationProduct;
+import fi.fmi.avi.archiver.config.model.FileConfig;
+import fi.fmi.avi.archiver.config.util.SpringProcessingServiceContextHelper;
+import fi.fmi.avi.archiver.database.DatabaseService;
+import fi.fmi.avi.archiver.file.FileMetadata;
+import fi.fmi.avi.archiver.file.FileProcessingIdentifier;
+import fi.fmi.avi.archiver.file.FileReference;
+import fi.fmi.avi.archiver.file.InputAviationMessage;
+import fi.fmi.avi.archiver.logging.GenericStructuredLoggable;
+import fi.fmi.avi.archiver.logging.model.*;
+import fi.fmi.avi.archiver.logging.slf4j.SLF4JLoggables;
+import fi.fmi.avi.archiver.message.processor.populator.MessagePopulationService;
+import fi.fmi.avi.archiver.message.processor.postaction.PostActionService;
+import fi.fmi.avi.archiver.spring.context.CompoundLifecycle;
+import fi.fmi.avi.archiver.spring.integration.dsl.ServiceActivators;
+import fi.fmi.avi.archiver.spring.integration.file.filters.AcceptUnchangedFileListFilter;
+import fi.fmi.avi.archiver.spring.integration.file.filters.AnyAcceptFileListFilter;
+import fi.fmi.avi.archiver.spring.integration.file.filters.ProcessingFileListFilter;
+import fi.fmi.avi.archiver.spring.messaging.MessageHeaderReference;
+import fi.fmi.avi.archiver.spring.retry.RetryAdviceFactory;
 import org.aopalliance.aop.Advice;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -58,37 +56,27 @@ import org.springframework.messaging.MessagingException;
 import org.springframework.messaging.support.ErrorMessage;
 import org.springframework.stereotype.Component;
 
-import com.google.common.collect.ImmutableList;
+import javax.annotation.Nullable;
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import fi.fmi.avi.archiver.ProcessingState;
-import fi.fmi.avi.archiver.config.model.AviationProduct;
-import fi.fmi.avi.archiver.config.model.FileConfig;
-import fi.fmi.avi.archiver.database.DatabaseService;
-import fi.fmi.avi.archiver.file.FileMetadata;
-import fi.fmi.avi.archiver.file.FileProcessingIdentifier;
-import fi.fmi.avi.archiver.file.FileReference;
-import fi.fmi.avi.archiver.file.InputAviationMessage;
-import fi.fmi.avi.archiver.logging.GenericStructuredLoggable;
-import fi.fmi.avi.archiver.logging.model.BulletinLogReference;
-import fi.fmi.avi.archiver.logging.model.FileProcessingStatistics;
-import fi.fmi.avi.archiver.logging.model.FileProcessingStatisticsImpl;
-import fi.fmi.avi.archiver.logging.model.LoggingContext;
-import fi.fmi.avi.archiver.logging.model.LoggingContextImpl;
-import fi.fmi.avi.archiver.logging.model.ProcessingPhase;
-import fi.fmi.avi.archiver.logging.slf4j.SLF4JLoggables;
-import fi.fmi.avi.archiver.spring.context.CompoundLifecycle;
-import fi.fmi.avi.archiver.spring.integration.dsl.ServiceActivators;
-import fi.fmi.avi.archiver.spring.integration.file.filters.AcceptUnchangedFileListFilter;
-import fi.fmi.avi.archiver.spring.integration.file.filters.AnyAcceptFileListFilter;
-import fi.fmi.avi.archiver.spring.integration.file.filters.ProcessingFileListFilter;
-import fi.fmi.avi.archiver.spring.messaging.MessageHeaderReference;
-import fi.fmi.avi.archiver.spring.retry.RetryAdviceFactory;
+import static fi.fmi.avi.archiver.config.util.SpringProcessingServiceContextHelper.*;
+import static fi.fmi.avi.archiver.logging.GenericStructuredLoggable.loggable;
+import static java.util.Objects.requireNonNull;
 
 @Configuration
 public class IntegrationFlowConfig {
     public static final MessageHeaderReference<FileReference> FILE_REFERENCE = MessageHeaderReference.simpleNameOf(FileReference.class);
     public static final MessageHeaderReference<FileMetadata> FILE_METADATA = MessageHeaderReference.simpleNameOf(FileMetadata.class);
-    public static final MessageHeaderReference<Boolean> PROCESSING_ERRORS = MessageHeaderReference.of("ProcessingErrors", Boolean.class);
     public static final MessageHeaderReference<FileProcessingIdentifier> PROCESSING_IDENTIFIER = MessageHeaderReference.simpleNameOf(
             FileProcessingIdentifier.class);
     public static final MessageHeaderReference<String> FILENAME = MessageHeaderReference.of(FileHeaders.FILENAME, String.class);
@@ -102,10 +90,6 @@ public class IntegrationFlowConfig {
     private static final List<String> LOGGING_ENV_MDC_KEYS = ImmutableList.of(//
             FileProcessingIdentifier.newInstance().getStructureName(), //
             ProcessingPhase.START.getStructureName());
-
-    public static boolean hasProcessingErrors(final MessageHeaders headers) {
-        return PROCESSING_ERRORS.getOptional(headers).orElse(false);
-    }
 
     private static GenericHandler<?> loggingEnvSetter(final ProcessingPhase processingPhase) {
         return (payload, headers) -> {
@@ -129,32 +113,39 @@ public class IntegrationFlowConfig {
     }
 
     @Bean
-    IntegrationFlow archivalFlow(final FileToStringTransformer fileToStringTransformer, final RequestHandlerRetryAdvice fileReadingRetryAdvice,
+    IntegrationFlow archivalFlow(
+            final FileToStringTransformer fileToStringTransformer, final RequestHandlerRetryAdvice fileReadingRetryAdvice,
             final ParserConfig.FileParserIntegrationService fileParserIntegrationService,
-            final MessagePopulatorConfig.MessagePopulationIntegrationService messagePopulationIntegrationService, final DatabaseService databaseService,
+            final MessagePopulationService messagePopulationService,
+            final DatabaseService databaseService, final PostActionService postActionService,
             final MessageChannel processingChannel, final MessageChannel parserChannel, final MessageChannel populatorChannel,
-            final MessageChannel databaseChannel, final MessageChannel archiveChannel, final MessageChannel successChannel, final MessageChannel failChannel) {
+            final MessageChannel databaseChannel, final MessageChannel postActionChannel, final MessageChannel archiveChannel,
+            final MessageChannel successChannel, final MessageChannel failChannel) {
         return IntegrationFlows.from(processingChannel)
                 .handle(loggingEnvSetter(ProcessingPhase.READ))
                 .transform(fileToStringTransformer, spec -> spec.advice(fileReadingRetryAdvice))
                 .handle(loggingEnvCleaner())
                 .channel(parserChannel)
                 .handle(loggingEnvSetter(ProcessingPhase.PARSE))
-                .<String> filter(content -> content != null && !content.isEmpty(), discards -> discards.discardChannel(failChannel))
+                .<String>filter(content -> content != null && !content.isEmpty(), discards -> discards.discardChannel(failChannel))
                 .handle(fileParserIntegrationService::parse)
-                .handle(withLoggingContext(this::loggingActionsAfterParse))
-                .<List<InputAviationMessage>> filter(messages -> !messages.isEmpty(), discards -> discards.discardChannel(failChannel))
+                .handle(peekLoggingContext(this::loggingActionsAfterParse))
+                .<List<InputAviationMessage>>filter(messages -> !messages.isEmpty(), discards -> discards.discardChannel(failChannel))
                 .handle(loggingEnvCleaner())
                 .channel(populatorChannel)
                 .handle(loggingEnvSetter(ProcessingPhase.POPULATE))
-                .handle(messagePopulationIntegrationService::populateMessages)
+                .handle(mapPayloadWithProcessingServiceContext(messagePopulationService::populateMessages))
                 .handle(loggingEnvCleaner())
                 .channel(databaseChannel)
                 .handle(loggingEnvSetter(ProcessingPhase.STORE))
-                .handle(withPayloadAndLoggingContext(databaseService::insertMessages))
+                .handle(mapPayloadWithProcessingServiceContext(databaseService::insertMessages))
                 .handle(loggingEnvCleaner())
+                .channel(postActionChannel)
+                .handle(loggingEnvSetter(ProcessingPhase.POST_ACTIONS))//
+                .handle(peekPayloadAndLoggingContext(postActionService::runPostActions))//
+                .handle(loggingEnvCleaner())//
                 .channel(archiveChannel)
-                .route(Message.class, message -> hasProcessingErrors(message.getHeaders()), spec -> spec//
+                .route(Message.class, message -> getProcessingServiceContext(message.getHeaders()).isProcessingErrors(), spec -> spec//
                         .channelMapping(false, successChannel)//
                         .channelMapping(true, failChannel))
                 .get();
@@ -168,7 +159,7 @@ public class IntegrationFlowConfig {
     private void logFileContentOverview(final LoggingContext loggingContext) {
         if (LOGGER.isInfoEnabled()) {
             final List<BulletinLogReference> bulletins = loggingContext.getAllBulletins();
-            if (bulletins.size() == 1 && !bulletins.get(0).getHeading().isPresent()) {
+            if (bulletins.size() == 1 && bulletins.getFirst().getHeading().isEmpty()) {
                 loggingContext.enterBulletin(0);
                 LOGGER.info("Messages in <{}>: {}", loggingContext, loggingContext.getBulletinMessages());
                 loggingContext.leaveBulletin();
@@ -182,41 +173,44 @@ public class IntegrationFlowConfig {
     IntegrationFlow finishFlow(final ProcessingState processingState, final MessageChannel finishChannel) {
         return IntegrationFlows.from(finishChannel)//
                 .handle(loggingEnvSetter(ProcessingPhase.FINISH))//
-                .handle(ServiceActivators.peekHeader(FILE_REFERENCE, processingState::finish))//
+                .handle(ServiceActivators.peekHeaderIfExists(FILE_REFERENCE, processingState::finish))//
                 .handle(this::logFinish)//
                 .handle(loggingEnvCleaner())//
                 .nullChannel();
     }
 
     private Object logFinish(final Object payload, final MessageHeaders headers) {
-        final LoggingContext loggingContext = getLoggingContext(headers);
+        final ProcessingServiceContext context = getProcessingServiceContext(headers);
+        final LoggingContext loggingContext = context.getLoggingContext();
         loggingContext.leaveBulletin();
         LOGGER.info("Finish processing <{}> {}. Statistics: {}", loggingContext,
-                hasProcessingErrors(headers) ? PROCESSING_ERRORS_TRUE : PROCESSING_ERRORS_FALSE, loggingContext.getStatistics());
+                context.isProcessingErrors() ? PROCESSING_ERRORS_TRUE : PROCESSING_ERRORS_FALSE, loggingContext.getStatistics());
         return payload;
     }
 
     @Bean
-    IntegrationFlow errorMessageFlow(final MessageChannel errorMessageChannel, final MessageChannel failChannel,
+    IntegrationFlow errorMessageFlow(
+            final MessageChannel errorMessageChannel, final MessageChannel failChannel,
             @SuppressWarnings("rawtypes") final GenericTransformer<Message, File> headerToFileTransformer,
             @SuppressWarnings("rawtypes") final GenericTransformer<Message, Message> errorMessageToOriginalTransformer) {
         return IntegrationFlows.from(errorMessageChannel)//
                 .handle(loggingEnvSetter(ProcessingPhase.FAIL))//
                 .transform(Message.class, errorMessageToOriginalTransformer)//
                 .transform(Message.class, headerToFileTransformer)//
-                .enrichHeaders(spec -> spec.header(PROCESSING_ERRORS.getName(), true, true))//
+                .handle(peekProcessingServiceContext(ProcessingServiceContext::signalProcessingErrors))
                 .handle(loggingEnvCleaner())//
                 .channel(failChannel)//
                 .get();
     }
 
     @Bean
-    IntegrationFlow errorLoggingFlow(final MessageChannel errorLoggingChannel, final MessageChannel finishChannel,
+    IntegrationFlow errorLoggingFlow(
+            final MessageChannel errorLoggingChannel, final MessageChannel finishChannel,
             @SuppressWarnings("rawtypes") final GenericTransformer<Message, Message> errorMessageToOriginalTransformer) {
         return IntegrationFlows.from(errorLoggingChannel)//
                 .handle(loggingEnvSetter(ProcessingPhase.FAIL))//
                 .transform(Message.class, errorMessageToOriginalTransformer)//
-                .enrichHeaders(spec -> spec.header(PROCESSING_ERRORS.getName(), true, true))//
+                .handle(peekProcessingServiceContext(ProcessingServiceContext::signalProcessingErrors))
                 .handle(loggingEnvCleaner())//
                 .channel(finishChannel)//
                 .get();
@@ -244,10 +238,10 @@ public class IntegrationFlowConfig {
     }
 
     @Bean
-    RetryAdviceFactory retryAdviceFactory(//
-            @Value("${file-handler.retry.initial-interval}") final Duration initialInterval, //
-            @Value("${file-handler.retry.max-interval}") final Duration maxInterval, //
-            @Value("${file-handler.retry.multiplier}") final int retryMultiplier, //
+    RetryAdviceFactory retryAdviceFactory(
+            @Value("${file-handler.retry.initial-interval}") final Duration initialInterval,
+            @Value("${file-handler.retry.max-interval}") final Duration maxInterval,
+            @Value("${file-handler.retry.multiplier}") final int retryMultiplier,
             @Value("${file-handler.retry.timeout}") final Duration timeout) {
         return new RetryAdviceFactory(initialInterval, maxInterval, retryMultiplier, timeout);
     }
@@ -287,10 +281,9 @@ public class IntegrationFlowConfig {
     @SuppressWarnings("rawtypes")
     GenericTransformer<Message, Message> errorMessageToOriginalTransformer() {
         return message -> {
-            if (!(message instanceof ErrorMessage)) {
+            if (!(message instanceof final ErrorMessage errorMessage)) {
                 return message;
             }
-            final ErrorMessage errorMessage = (ErrorMessage) message;
             final Throwable throwable = errorMessage.getPayload();
             final Message<?> failedMessage;
             if (throwable instanceof MessagingException) {
@@ -301,16 +294,16 @@ public class IntegrationFlowConfig {
                 failedMessage = errorMessage.getOriginalMessage();
             } else {
                 // Unable to get the original message, log the exception
-                LOGGER.error("Unable to extract original Spring Integration message from error message of processing <{}>.", getLoggingContext(message),
+                LOGGER.error("Unable to extract original Spring Integration message from error message of processing <{}>.",
+                        getProcessingServiceContext(message).getLoggingContext(),
                         throwable);
                 failedMessage = null;
             }
             if (failedMessage != null) {
                 setLoggingEnv(failedMessage.getHeaders(), ProcessingPhase.FAIL);
             }
-            final LoggingContext loggingContext = getLoggingContext(failedMessage);
-            @Nullable
-            final Throwable errorToLog = throwable instanceof MessagingException ? throwable.getCause() : throwable;
+            final LoggingContext loggingContext = getProcessingServiceContext(failedMessage).getLoggingContext();
+            @Nullable final Throwable errorToLog = throwable instanceof MessagingException ? throwable.getCause() : throwable;
             LOGGER.error("Error while processing <{}>: {}", loggingContext, errorToLog == null ? "" : errorToLog.getMessage(), errorToLog);
             loggingContext.recordProcessingResult(FileProcessingStatistics.ProcessingResult.FAILED);
             return failedMessage;
@@ -339,7 +332,8 @@ public class IntegrationFlowConfig {
         private final MessageChannel failChannel;
         private final MessageChannel finishChannel;
 
-        ProductFlowsInitializer(final IntegrationFlowContext context, final Map<String, AviationProduct> aviationProducts,
+        ProductFlowsInitializer(
+                final IntegrationFlowContext context, final Map<String, AviationProduct> aviationProducts,
                 final CompoundLifecycle inputReadersLifecycle, final ProcessingState processingState, final List<Advice> archiveAdviceChain,
                 final List<Advice> failAdviceChain, final FileNameGenerator fileProcessingIdAppender,
                 @SuppressWarnings("rawtypes") final GenericTransformer<Message, File> headerToFileTransformer,
@@ -402,17 +396,18 @@ public class IntegrationFlowConfig {
                         .map(fileConfig -> IntegrationFlows.from(inputChannel)//
                                 .filter(new RegexPatternFileListFilter(fileConfig.getPattern())::accept)//
                                 .enrichHeaders(spec -> spec//
+                                        .defaultOverwrite(true)
                                         .header(PRODUCT_KEY, product)//
                                         .errorChannel(errorMessageChannel)
                                         .headerFunction(FILE_REFERENCE.getName(),
                                                 message -> FileReference.create(product.getId(), FILENAME.getNonNull(message.getHeaders())))
                                         .headerFunction(PROCESSING_IDENTIFIER.getName(), message -> FileProcessingIdentifier.newInstance())//
-                                        .headerFunction(SpringLoggingContextHelper.HEADER.getName(), message -> createLoggingContext()))//
+                                        .headerFunction(SpringProcessingServiceContextHelper.HEADER.getName(), message -> createProcessingServiceContext()))//
                                 .handle(loggingEnvSetter(ProcessingPhase.START))//
                                 .handle((payload, headers) -> {
                                     final FileReference file = FILE_REFERENCE.getNonNull(headers);
                                     processingState.start(file);
-                                    final LoggingContext loggingContext = getLoggingContext(headers);
+                                    final LoggingContext loggingContext = getProcessingServiceContext(headers).getLoggingContext();
                                     loggingContext.enterFile(file);
                                     LOGGER.info("Start processing <{}>", loggingContext);
                                     return payload;
@@ -424,15 +419,14 @@ public class IntegrationFlowConfig {
                                 .get()//
                         ));
 
-                @SuppressWarnings("rawtypes")
-                final GenericSelector<Message> productFilter = m -> Objects.equals(m.getHeaders().get(PRODUCT_KEY), product);
+                @SuppressWarnings("rawtypes") final GenericSelector<Message> productFilter = m -> Objects.equals(m.getHeaders().get(PRODUCT_KEY), product);
 
                 registerIntegrationFlow(IntegrationFlows.from(successChannel)//
                         .handle(loggingEnvSetter(ProcessingPhase.SUCCESS))//
                         .filter(Message.class, productFilter)//
                         .transform(Message.class, headerToFileTransformer)//
                         .handle(createArchiveHandler(product.getArchiveDir()))//
-                        .handle(withLoggingContext(loggingContext -> LOGGER.debug("Moved <{}> to '{}'.", loggingContext, product.getArchiveDir())))//
+                        .handle(peekLoggingContext(loggingContext -> LOGGER.debug("Moved <{}> to '{}'.", loggingContext, product.getArchiveDir())))//
                         .handle(loggingEnvCleaner())//
                         .channel(finishChannel)//
                         .get());
@@ -442,15 +436,17 @@ public class IntegrationFlowConfig {
                         .filter(Message.class, productFilter)//
                         .transform(Message.class, headerToFileTransformer)//
                         .handle(createFailHandler(product.getFailDir()))//
-                        .handle(withLoggingContext(loggingContext -> LOGGER.debug("Moved <{}> to '{}'.", loggingContext, product.getFailDir())))//
+                        .handle(peekLoggingContext(loggingContext -> LOGGER.debug("Moved <{}> to '{}'.", loggingContext, product.getFailDir())))//
                         .handle(loggingEnvCleaner())//
                         .channel(finishChannel)//
                         .get());
             });
         }
 
-        private LoggingContext createLoggingContext() {
-            return LoggingContext.asSynchronized(new LoggingContextImpl(FileProcessingStatistics.asSynchronized(new FileProcessingStatisticsImpl())));
+        private ProcessingServiceContext createProcessingServiceContext() {
+            final LoggingContext loggingContext = LoggingContext.asSynchronized(
+                    new LoggingContextImpl(FileProcessingStatistics.asSynchronized(new FileProcessingStatisticsImpl())));
+            return new DefaultProcessingServiceContext(loggingContext);
         }
 
         @PreDestroy
