@@ -4,12 +4,17 @@ import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Streams;
 import com.google.common.io.Resources;
 import fi.fmi.avi.archiver.config.ConversionConfig;
+import fi.fmi.avi.archiver.config.TestConfig;
 import fi.fmi.avi.archiver.config.model.AviationProduct;
 import fi.fmi.avi.archiver.database.DatabaseAccess;
 import fi.fmi.avi.archiver.database.DatabaseAccessTestUtil;
+import fi.fmi.avi.archiver.file.FileReference;
+import fi.fmi.avi.archiver.message.ArchivalStatus;
 import fi.fmi.avi.archiver.message.ArchiveAviationMessage;
 import fi.fmi.avi.archiver.message.ArchiveAviationMessageIWXXMDetails;
 import fi.fmi.avi.archiver.message.ProcessingResult;
+import fi.fmi.avi.archiver.message.processor.postaction.TestPostAction;
+import fi.fmi.avi.archiver.message.processor.postaction.TestPostActionRegistry;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
 import org.custommonkey.xmlunit.XMLUnit;
 import org.inferred.freebuilder.FreeBuilder;
@@ -21,6 +26,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.ConfigDataApplicationContextInitializer;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.DirtiesContext;
+import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.jdbc.Sql;
 import org.springframework.test.context.support.AnnotationConfigContextLoader;
@@ -43,27 +49,29 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static java.util.Objects.requireNonNull;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
-@SuppressWarnings("UnstableApiUsage")
-@SpringBootTest({ "auto.startup=false", "testclass.name=fi.fmi.avi.archiver.AviationMessageArchiverTest" })
-@Sql(scripts = { "classpath:/fi/fmi/avi/avidb/schema/h2/schema-h2.sql", "classpath:/h2-data/avidb_test_content.sql" }, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
+@SpringBootTest({"auto.startup=false", "testclass.name=fi.fmi.avi.archiver.AviationMessageArchiverTest"})
+@Sql(scripts = {"classpath:/fi/fmi/avi/avidb/schema/h2/schema-h2.sql", "classpath:/h2-data/avidb_test_content.sql"}, executionPhase = Sql.ExecutionPhase.BEFORE_TEST_METHOD)
 @Sql(scripts = "classpath:/h2-data/avidb_cleanup_test.sql", executionPhase = Sql.ExecutionPhase.AFTER_TEST_METHOD)
-@ContextConfiguration(classes = { AviationMessageArchiver.class, TestConfig.class, ConversionConfig.class },//
+@ContextConfiguration(classes = {AviationMessageArchiver.class, TestConfig.class, ConversionConfig.class},//
         loader = AnnotationConfigContextLoader.class,//
-        initializers = { ConfigDataApplicationContextInitializer.class })
+        initializers = {ConfigDataApplicationContextInitializer.class})
+@ActiveProfiles("integration-test")
 class AviationMessageArchiverTest {
 
     private static final String TEMP_FILE_SUFFIX = ".tmp";
     private static final Set<String> INCLUDE_INPUT_FILES = ImmutableSet.of();
 
     private final RecursiveComparisonConfiguration archiveMessageComparisonConfiguration = RecursiveComparisonConfiguration.builder()
-            .withEqualsForFields(new MessageContentPredicate(), "message")
+            .withEqualsForFields(MessageContentPredicate.INSTANCE, "message")
+            .build();
+    private final RecursiveComparisonConfiguration postActionInvocationComparisonConfiguration = RecursiveComparisonConfiguration.builder()
+            .withEqualsForFields(MessageContentPredicate.INSTANCE, "archiveAviationMessage.message")
             .build();
 
     @Autowired
@@ -72,6 +80,8 @@ class AviationMessageArchiverTest {
     private DatabaseAccess databaseAccess;
     @Autowired
     private Clock clock;
+    @Autowired
+    private TestPostActionRegistry testPostActionRegistry;
     private DatabaseAccessTestUtil databaseAccessTestUtil;
 
     @SuppressWarnings("ConstantConditions")
@@ -98,6 +108,7 @@ class AviationMessageArchiverTest {
                                 .setValidTo(Instant.parse("2020-05-19T12:00:00Z"))
                                 .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                 .setHeading("FTXX33 XXXX 181500")
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -117,6 +128,7 @@ class AviationMessageArchiverTest {
                                 .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                 .setHeading("FTXX33 XXXX 181500")
                                 .setProcessingResult(ProcessingResult.UNKNOWN_STATION_ICAO_CODE)
+                                .setArchivalStatus(ArchivalStatus.REJECTED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -136,6 +148,7 @@ class AviationMessageArchiverTest {
                                 .setValidTo(Instant.parse("2020-06-19T12:00:00Z"))
                                 .setFileModified(Instant.parse("2020-06-15T00:00:00Z"))
                                 .setHeading("FTXX33 XXXX 181500")
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -224,6 +237,7 @@ class AviationMessageArchiverTest {
                                 .setValidFrom(Instant.parse("2020-05-18T12:00:00Z"))
                                 .setValidTo(Instant.parse("2020-05-19T12:00:00Z"))
                                 .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -241,6 +255,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDO 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2020-05-16T00:00:00Z"))
@@ -252,6 +267,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDD 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -269,6 +285,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDO 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2020-05-16T00:00:00Z"))
@@ -280,6 +297,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDD 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2020-05-18T00:00:00Z"))
@@ -291,6 +309,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDO 180000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 180000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2020-05-18T00:00:00Z"))
@@ -302,6 +321,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDD 180000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 180000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -319,6 +339,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDO 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2020-05-16T00:00:00Z"))
@@ -330,6 +351,7 @@ class AviationMessageArchiverTest {
                                         .setMessage("TAF YUDD 160000Z NIL=")
                                         .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                         .setHeading("FTYU31 YUDO 160000")
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .expectFail()//
                         .build(),//
@@ -348,6 +370,7 @@ class AviationMessageArchiverTest {
                                 .setMessage("TAF YUDO 160000Z NIL=")
                                 .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                 .setHeading("FTYU31 YUDO 160000")
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .addRejectedMessages(ArchiveAviationMessage.builder()
                                 .setMessageTime(Instant.parse("2020-05-16T00:00:00Z"))
@@ -359,6 +382,7 @@ class AviationMessageArchiverTest {
                                 .setFileModified(Instant.parse("2020-05-15T00:00:00Z"))
                                 .setHeading("FTYU31 YUDO 160000")
                                 .setProcessingResult(ProcessingResult.UNKNOWN_STATION_ICAO_CODE)
+                                .setArchivalStatus(ArchivalStatus.REJECTED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -387,6 +411,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/2.1")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -405,6 +430,7 @@ class AviationMessageArchiverTest {
                                 .setValidTo(Instant.parse("2017-07-31T12:00:00Z"))
                                 .setFileModified(Instant.parse("2017-07-30T10:30:00Z"))
                                 .setProcessingResult(ProcessingResult.UNKNOWN_STATION_ICAO_CODE)
+                                .setArchivalStatus(ArchivalStatus.REJECTED)
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/2.1")//
                                         .build())
@@ -430,6 +456,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2017-07-27T11:37:00Z"))
@@ -446,6 +473,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -468,6 +496,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2017-07-27T11:37:00Z"))
@@ -484,6 +513,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -513,6 +543,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/2.1")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -536,6 +567,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2017-07-27T11:37:00Z"))
@@ -553,6 +585,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/2.1")
                                                 .setCollectIdentifier("A_LTFI31EFKL301115_C_EFKL_201902011315--.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())//
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -574,6 +607,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211300_C_EFKL_20211021130000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2021-10-21T14:36:00Z"))
@@ -591,6 +625,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211400_C_EFKL_20211021140000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2021-10-21T14:37:00Z"))
@@ -608,6 +643,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211400_C_EFKL_20211021140000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -629,6 +665,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211400_C_EFKL_20211021140000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2021-10-21T14:36:00Z"))
@@ -646,6 +683,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211400_C_EFKL_20211021140000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build(), //
                                 ArchiveAviationMessage.builder()
                                         .setMessageTime(Instant.parse("2021-10-21T14:37:00Z"))
@@ -663,6 +701,7 @@ class AviationMessageArchiverTest {
                                                 .setXMLNamespace("http://icao.int/iwxxm/3.0")
                                                 .setCollectIdentifier("A_LCFI32EFKL211400_C_EFKL_20211021140000.xml")
                                                 .build())
+                                        .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                         .build())
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -682,6 +721,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/3.0")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -703,6 +743,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/3.0")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -725,6 +766,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/3.0")//
                                         .build())//
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())//
                         .build(),//
                 AviationMessageArchiverTestCase.builder()//
@@ -747,6 +789,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/3.0")//
                                         .build())//
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())//
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -775,6 +818,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/3.0")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -796,6 +840,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/2023-1")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -817,6 +862,7 @@ class AviationMessageArchiverTest {
                                 .setIWXXMDetails(ArchiveAviationMessageIWXXMDetails.builder()//
                                         .setXMLNamespace("http://icao.int/iwxxm/2023-1")//
                                         .build())
+                                .setArchivalStatus(ArchivalStatus.ARCHIVED)
                                 .build())
                         .build(), //
                 AviationMessageArchiverTestCase.builder()//
@@ -831,6 +877,7 @@ class AviationMessageArchiverTest {
     @BeforeEach
     public void setUp() {
         databaseAccessTestUtil = new DatabaseAccessTestUtil(databaseAccess, clock.instant());
+        testPostActionRegistry.resetAll();
     }
 
     @ParameterizedTest(name = "{index}: {0}")
@@ -853,6 +900,8 @@ class AviationMessageArchiverTest {
         } else {
             databaseAccessTestUtil.assertRejectedMessagesEmpty();
         }
+
+        assertPostActionInvocations(Stream.of(testCase));
     }
 
     private void skipExcluded(final AviationMessageArchiverTestCase testCase) {
@@ -868,7 +917,7 @@ class AviationMessageArchiverTest {
     void test_all_at_once() throws IOException {
         final List<AviationMessageArchiverTestCase> cases = test_archival()//
                 .filter(this::isIncluded)//
-                .collect(Collectors.toList());
+                .toList();
         cases.parallelStream().forEach(this::copyFileSetLastModified);
         cases.parallelStream().forEach(this::renameTempFile);
         cases.parallelStream().forEach(this::assertFileOperations);
@@ -884,6 +933,7 @@ class AviationMessageArchiverTest {
                         .containsAll(testCase.getRejectedMessages());
             }
         });
+        assertPostActionInvocations(cases.stream());
     }
 
     private void assertFileFlow(final AviationMessageArchiverTestCase testCase) {
@@ -915,7 +965,7 @@ class AviationMessageArchiverTest {
         final AviationProduct product = testCase.getProduct(aviationProducts);
         final Path testFile = testCase.getTestFile(product);
 
-        if (testCase.getUnhandled()) {
+        if (testCase.isUnhandled()) {
             assertThat(testFile).exists();
         } else {
             try {
@@ -924,6 +974,32 @@ class AviationMessageArchiverTest {
                 throw new RuntimeException(e);
             }
             assertThat(testFile).doesNotExist();
+        }
+    }
+
+    private void assertPostActionInvocations(final Stream<AviationMessageArchiverTestCase> testCases) {
+        assertThat(TestablePostActionInvocation.fromInvocations(testPostActionRegistry.get("test").getInvocations().stream()))
+                .usingRecursiveFieldByFieldElementComparator(postActionInvocationComparisonConfiguration)
+                .containsExactlyInAnyOrderElementsOf(TestablePostActionInvocation.fromTestCases(testCases));
+    }
+
+    private enum MessageContentPredicate implements BiPredicate<String, String> {
+        INSTANCE;
+
+        @Override
+        public boolean test(final String left, final String right) {
+            if (left.equals(right)) {
+                return true;
+            } else {
+                try {
+                    XMLUnit.setIgnoreWhitespace(true);
+                    XMLUnit.setIgnoreComments(true);
+                    return XMLUnit.compareXML(left, right).identical();
+                } catch (final IOException | SAXException e) {
+                    e.printStackTrace();
+                    return false;
+                }
+            }
         }
     }
 
@@ -959,9 +1035,9 @@ class AviationMessageArchiverTest {
 
         public abstract List<ArchiveAviationMessage> getRejectedMessages();
 
-        public abstract boolean getExpectFail();
+        public abstract boolean isExpectFail();
 
-        public abstract boolean getUnhandled();
+        public abstract boolean isUnhandled();
 
         public int getFormat() {
             return Streams.concat(getArchivedMessages().stream(), getRejectedMessages().stream())//
@@ -995,7 +1071,7 @@ class AviationMessageArchiverTest {
 
         public void assertInputAndOutputFilesEquals(final AviationProduct product) throws InterruptedException, IOException {
             final byte[] expectedContent = readResourceToByteArray(getInputFileName());
-            final Path expectedOutputDir = getExpectFail() ? product.getFailDir() : product.getArchiveDir();
+            final Path expectedOutputDir = isExpectFail() ? product.getFailDir() : product.getArchiveDir();
             final Path outputFile = waitUntilFileExists(expectedOutputDir, getInputFileName());
 
             assertThat(outputFile)//
@@ -1037,22 +1113,46 @@ class AviationMessageArchiverTest {
         }
     }
 
-    private static class MessageContentPredicate implements BiPredicate<String, String> {
-        @Override
-        public boolean test(final String left, final String right) {
-            if (left.equals(right)) {
-                return true;
-            } else {
-                try {
-                    XMLUnit.setIgnoreWhitespace(true);
-                    XMLUnit.setIgnoreComments(true);
-                    return XMLUnit.compareXML(left, right).identical();
-                } catch (final IOException | SAXException e) {
-                    e.printStackTrace();
-                    return false;
-                }
-            }
+    private record TestablePostActionInvocation(
+            FileReference fileReference,
+            Optional<Instant> fileModified,
+            ArchiveAviationMessage archiveAviationMessage
+    ) {
+        private TestablePostActionInvocation {
+            requireNonNull(fileReference, "fileReference");
+            requireNonNull(fileModified, "fileModified");
+            requireNonNull(archiveAviationMessage, "archiveAviationMessage");
+        }
+
+        private static List<TestablePostActionInvocation> fromTestCases(final Stream<AviationMessageArchiverTestCase> testCases) {
+            return testCases
+                    .flatMap(testCase -> Stream.concat(
+                                    testCase.getArchivedMessages().stream(),
+                                    testCase.getRejectedMessages().stream())
+                            .map(archiveAviationMessage -> from(testCase, archiveAviationMessage)))
+                    .toList();
+        }
+
+        public static List<TestablePostActionInvocation> fromInvocations(final Stream<TestPostAction.Invocation> invocations) {
+            return invocations
+                    .map(TestablePostActionInvocation::from)
+                    .toList();
+        }
+
+        private static TestablePostActionInvocation from(final AviationMessageArchiverTestCase testCase, final ArchiveAviationMessage archiveAviationMessage) {
+            return new TestablePostActionInvocation(
+                    FileReference.create(testCase.getProductName(), testCase.getInputFileName()),
+                    Optional.of(testCase.getFileModified()),
+                    archiveAviationMessage
+            );
+        }
+
+        private static TestablePostActionInvocation from(final TestPostAction.Invocation invocation) {
+            return new TestablePostActionInvocation(
+                    invocation.context().getInputMessage().getFileMetadata().getFileReference(),
+                    invocation.context().getInputMessage().getFileMetadata().getFileModified(),
+                    invocation.message()
+            );
         }
     }
-
 }
